<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5da4ba"
    android:orientation="vertical"
    tools:context=".Regular">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f0f8ff"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/count_equals"

            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/true_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/count"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/running_count_equals"
            android:textColor="#000000"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/number_of_decks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/true_count"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/remaining_decks_equals"
            android:textColor="#000000"
            android:textSize="20dp" />

        <Button
            android:id="@+id/set_decks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/number_of_decks"
            android:layout_centerHorizontal="true"
            android:onClick="selectDeck"
            android:text="@string/set_number_of_decks" />

        <Button
            android:id="@+id/reset_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/set_decks"
            android:layout_alignBaseline="@+id/set_decks"
            android:layout_centerHorizontal="true"
            android:onClick="resetShoe"
            android:layout_toEndOf="@id/set_decks"
            android:text="@string/reset_count" />

        <Button
            android:id="@+id/menu"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/set_decks"
            android:layout_alignBaseline="@+id/set_decks"
            android:layout_centerHorizontal="true"

            android:layout_toStartOf="@id/set_decks"
            android:text="@string/menu"
            android:onClick="goToMenu"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/deck_number_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/one_deck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_deck"
            android:onClick="radioSelection"
            />

        <RadioButton
            android:id="@+id/two_decks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_decks"
            android:onClick="radioSelection"
            />

            <RadioButton
                android:id="@+id/four_decks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four_decks"
                android:onClick="radioSelection"
                />

            <RadioButton
                android:id="@+id/six_decks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six_decks"
                android:onClick="radioSelection"
                />

            <RadioButton
                android:id="@+id/eight_decks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight_decks"
                android:onClick="radioSelection"
                />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_marginStart="20dp"
            android:onClick="done"/>
        </RadioGroup>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="3"
            android:background="@color/red"
            android:paddingTop="150dp"
            android:text="-"
            android:textAlignment="center"
            android:onClick="counting"

            android:textSize="100dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="400dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="3"
            android:background="@color/green"
            android:paddingTop="150dp"
            android:text="+"
            android:textAlignment="center"
            android:textSize="100dp"
            android:onClick="counting"/>


    </LinearLayout>





</android.support.v7.widget.LinearLayoutCompat>